@@ -1,9 +1,9 @@
 package org.flickit.flickitassessmentcore.adapter.out.persistence.assessment;
 
 import lombok.RequiredArgsConstructor;
+import org.flickit.flickitassessmentcore.application.port.in.assessment.GetAssessmentListUseCase.AssessmentWithMaturityLevelId;
 import org.flickit.flickitassessmentcore.application.port.out.assessment.CreateAssessmentPort;
-import org.flickit.flickitassessmentcore.application.port.out.assessment.LoadAssessmentBySpacePort;
-import org.flickit.flickitassessmentcore.domain.Assessment;
+import org.flickit.flickitassessmentcore.application.port.out.assessment.LoadAssessmentsWithMaturityLevelIdBySpacePort;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Component;
 
@@ -13,7 +13,9 @@ import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
-public class AssessmentPersistenceJpaAdaptor implements CreateAssessmentPort, LoadAssessmentBySpacePort {
+public class AssessmentPersistenceJpaAdaptor implements
+    CreateAssessmentPort,
+    LoadAssessmentsWithMaturityLevelIdBySpacePort {
 
     private final AssessmentJpaRepository repository;
 
@@ -25,9 +27,9 @@ public class AssessmentPersistenceJpaAdaptor implements CreateAssessmentPort, Lo
     }
 
     @Override
-    public List<Assessment> loadAssessmentBySpaceId(Long spaceId, int page, int size) {
-        return repository.findBySpaceIdOrderByLastModificationDateDesc(spaceId, PageRequest.of(page, size)).stream()
-            .map(AssessmentMapper::mapToDomainModel)
-            .collect(Collectors.toList());
+    public List<AssessmentWithMaturityLevelId> loadAssessmentsWithLastResultMaturityLevelIdBySpaceId(Long spaceId, int page, int size) {
+        return repository.findBySpaceIdOrderByLastModificationDateDescWithLastMaturityLevelId(spaceId, PageRequest.of(page, size)).stream()
+            .map(AssessmentMapper::mapToDomainModelWithMaturityLevelId)
+            .toList();
     }
 }
